style.css
@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Geologica:wght@100..900&display=swap');

:root {
    --colorPrimary: #000; 
    --colorBackground: #f0f0f0;
    --colorBackgroundUnhover: #c7c7c760;
    --colorBackgroundHover: #ffffff;
    --colorBorder: #fff;
    --colorImageBorder: #fdfdfd;
    --colorShadow: #24222220;
    --backgroundImage: url(resources/background.jpg);
}

@media (prefers-color-scheme: dark) {
    :root {
        --colorPrimary: #fff; 
        --colorBackground: #0f0f0f;
        --colorBackgroundUnhover: #38383870;
        --colorBackgroundHover: #555555;
        --colorBorder: #c0c0c0;
        --colorImageBorder: #c0c0c0;
        --colorShadow: #000;
        --backgroundImage: url(resources/background_dark.jpg);
    }
}

html {
    margin: 0;
    padding: 0;
    background-color: var(--colorBackground);
    background-image: var(--backgroundImage);
    background-repeat: repeat;
    background-attachment: fixed;
    color: var(--colorPrimary);
}

body {
    margin: 0;
    padding: 0;
    font-family: "Geologica", sans-serif;
    font-weight: 200;
}

#infoContainer {
    background-color: #f0f0f020;
    backdrop-filter: blur(1.8rem);
    box-shadow: 0px 0px 2rem var(--colorShadow);
    border-top: 3px solid var(--colorBorder);
    border-bottom: 3px solid var(--colorBorder);
    border-radius: 3rem;
}

#navBar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    box-shadow: 0px 0px 2rem var(--colorShadow);
    background-color: #f0f0f0a0;
    backdrop-filter: blur(2.8rem);
    border-bottom: 1px solid black;
    z-index: 6;
}

#navBarContent {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#navBarContent a {
    margin-top: 1.1rem;
    margin-bottom: 1.2rem;
    padding-left: 1rem;
    padding-right: 1rem;
    text-decoration: none;
    text-align: center;
    line-height: 2rem;
    display: inline-block;
    vertical-align: middle;
    border-radius: 1rem;
}

#navBarContent a:hover {
    background-color: var(--colorBackgroundUnhover);
}

@media (prefers-color-scheme: dark) {
    #infoContainer {
        background-color: #30303060;
        box-shadow: 0px 0px 2rem var(--colorShadow);
        border-top: 2px solid var(--colorBorder);
        border-bottom: 2px solid var(--colorBorder);
    }
    #navBar {
        background-color: #101010c0;
        box-shadow: 0px 0px 2rem var(--colorShadow);
        border-bottom: 1px solid var(--colorBorder);
    }
}

h1 {
    font-size: 2.5rem;
}

h1,h2,h3,h4,h5,h6 {
    font-family: "Averia Serif Libre", serif;
}

a {
    margin: 0;
    padding: 0;
    color: var(--colorPrimary);
}

a:hover {
    text-decoration: none;
}

ul {
    padding-left: 1.2rem;
}

#titleSection {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#titleSection h1 {
    height: fit-content;
}

#titleTopDiv {
    flex-grow: 2;
}

#titleBottomDiv {
    flex-grow: 1;
}

#aboutSection {
    display: grid;
    grid-template-columns: 1fr 2fr 2fr;
    grid-column-gap: 6vw;
    word-wrap: break-word;
}

#aboutSection h2 {
    margin-top: 0;
}

#aboutSection img {
    min-width: 18rem;
    border-radius: 2rem;
    border: 3px solid var(--colorImageBorder);
    box-shadow: 0px 0px 1.5rem var(--colorBackground);
    background-color: var(--colorImageBorder);
}

@media (prefers-color-scheme: dark) {
    #aboutSection img {
        border: 2px solid var(--colorImageBorder);
    }
}

#biography {
    text-align: justify;
    font-size: max(0.5vw + 0.68rem, 1rem);
}

#personalInfo {
    min-width: 10rem;
    font-size: 1rem;
}

#personalInfo p {
    margin-bottom: 0rem;
}

.listSection {
    font-size: 1.2rem;
}

.listSection h1 {
    border-bottom: 2px solid var(--colorPrimary);
    padding-bottom: 0.5rem;
    margin-top: 0;
}

.listItemGrid {
    display: grid;
    grid-template-columns: 1fr 2fr;
}

.listItemTitle {
    text-align: right;
    border-right: 1px solid var(--colorPrimary);
    padding-right: 3rem;
}

.listItemBody {
    padding-left: 3rem;
}

.listItemBody h3 {
    font-weight: normal;
}

.listItemBody p {
    text-align: justify;
}

.projectButton {
    width: 100%;
    height: 4rem;
}

.projectButton button {
    width: 12rem;
    height: 4rem;
    border-radius: 2rem;
    border: 2px solid var(--colorBackgroundHover);
    background-color: var(--colorBackgroundUnhover);
    backdrop-filter: blur(1.2rem);
    color: var(--colorPrimary);
    transition-duration: 200ms;
    margin-top: 0.4rem;
    margin-bottom: 1.5rem;
    padding-bottom: 3.8rem;
}

.projectButton p {
    width: 100%;
    font-size: 1.2rem;
    text-align: center;
}

.projectButton button:hover {
    cursor: pointer;
    border: 2px solid var(--colorBorder);
    background-color: var(--colorBackgroundHover);
    box-shadow: 0rem 0rem 0.8rem var(--colorShadow);
    transition-duration: 120ms;
}

.skillsGrid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 6vw;
}

.skillsGrid h3 {
    margin-top: 0;
}

@media (max-width: 50rem) {
    #navBarContent {
        display: none;
    }
    .listSection h1 {
        margin-top: 1rem;
    }
    .listItemTitle {
        text-align: left;
        border-right: none;
        border-bottom: 1px solid var(--colorPrimary);
    }
    .listItemBody {
        padding-left: 0;
        margin-bottom: 1rem;
        margin-top: 1.2rem;
    }
    .listItemGrid {
        grid-template-columns: 1fr;
    }
    .listItemBody ul {
        margin-top: 0;
    }
    .listItemGrid h3 {
        margin-top: 0;
    }
    .listItemTitle h3 {
        margin-bottom: .5rem;
    }
    .listItemGrid h5 {
        margin-top: 0;
        margin-bottom: .7rem;
    }
    #biography {
        margin-top: 2rem;
        font-size: 1.2rem;
    }
    #personalInfo {
        margin-top: 1rem;
        font-size: 1.2rem;
    }
    #aboutSection {
        grid-template-columns: 1fr;
        margin-bottom: 1.6rem;
    }
    .projectButton button {
        width: 100%;
    }

}

#footer {
    padding-bottom: 1rem;
    padding-top: 1rem;
    text-align: right;
}

#footer a {
    text-decoration: none;
}

.sidePadding {
    padding-right: max(24vw - 11rem, 20px);
    padding-left: max(24vw - 11rem, 20px);
}


#footer a {
    text-decoration: none;
}

.topPadding {
    padding-top: max(16vw - 5rem, 20px);
}

.bottomPadding {
    padding-bottom: max(16vw - 5rem, 20px);
}

